# rust_crash_course

./: README.md
day_4/: README.md
day_4/docs/: README.md
day_4/exercise_4_1/: Cargo.toml
day_4/exercise_4_1/src/: decode.rs
day_4/resources/: example_usages.sh  message-format.grammar  messages.jsonl
day_4/solutions/full-solution-with-extras/MessageFormat/: Cargo.toml
day_4/solutions/full-solution-with-extras/MessageFormat/src/: lib.rs
exercise_1_0/: Cargo.toml
exercise_1_0/src/: main.rs
exercise_2_0/: Cargo.toml
exercise_2_0/src/: generics.rs  main.rs  traits.rs
exercise_4_0/msgparser/: Cargo.toml
exercise_4_0/msgparser/src/: lib.rs
exercise_4_0/parser_cli/: Cargo.toml
exercise_4_0/parser_cli/src/: main.rs
