[package]
name = "exercise_4_1"
version = "0.1.0"
authors = ["Ivan Janković <ivan.jankovic@esrlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "decode"
path = "src/decode.rs"

[[bin]]
name = "encode"
path = "src/encode.rs"

[dependencies]
