[package]
name = "parser_cli"
version = "0.1.0"
authors = ["DmitryAstafyev <dvastafyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebuffer = "0.2.1"
msgparser = { version = "0.1.0", path = "../msgparser" }
