[package]
name = "msg_format"
version = "0.1.0"
authors = ["Nicola Coretti <nicola.coretti@esrlabs.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
human-panic = "1.0.1"
nom = "5.1.0"
serde = { verstion = "1.0.104", features = ["derive"], version = "1.0.110" }
serde_json = "1.0.53"
byteorder = "1.3.4"
anyhow = "1.0.31"

[[bin]]
name = "encode"
path = "src/bin/encode.rs"

[[bin]]
name = "decode"
path = "src/bin/decode.rs"

